<resources>
    <string name="app_name">FavDish</string>
    <string name="title_home">Home</string>
    <string name="splash_screen_title">Fav Dish</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_dish">Add Dish</string>
    <string name="lbl_add_dish">ADD DISH</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredient">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>

    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>